https://issues.apache.org/jira/browse/OPENEJB-2055 PMD basic.xml rule.
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/trunk@1546254 13f79535-47bb-0310-9956-ffa450edef68